[gd_scene format=4 uid="uid://cvvkjy36p2d3a"]

[ext_resource type="Texture2D" uid="uid://bfu2bkegas4uh" path="res://Assets/Objects/AirBombs/500KGBomb_0.png" id="1_d12cp"]
[ext_resource type="Script" uid="uid://8ph6b0rkv5jj" path="res://Objects/WorldObjects/BomberPlane/500KGBomb/500kg_bomb_object.gd" id="1_p5cw2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g63y8"]
resource_name = "material_0"
transparency = 2
alpha_scissor_threshold = 0.05
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("1_d12cp")
texture_filter = 0
texture_repeat = false

[sub_resource type="ArrayMesh" id="ArrayMesh_k5akp"]
_surfaces = [{
"aabb": AABB(-0.28125, -1, -0.28125, 0.5625, 2.1875, 0.5625),
"format": 34896613377,
"index_count": 408,
"index_data": PackedByteArray("AAABAAIAAgADAAAABAABAAAAAAAFAAQAAAADAAUABAAFAAYAAgAHAAMACAABAAQABAAGAAgAAgABAAkACQAHAAIACgAFAAMACwAGAAUACgALAAUADAADAAcADAAKAAMACQANAAcADgAMAAcADgAHAA0ADwANAAkACQABAA8AEAAOAA0ADwARAA0AEAANABEAEgARAA8ADwABABIAEwAQABEAEgAUABEAEwARABQAFQAUABIAEgABABUAFgATABQAFQAXABQAFgAUABcAGAAXABUAFQABABgAGQAWABcAGAAaABcAGQAXABoAGAABABsAGwAaABgAGwABABwAGwAdABoAHAAdABsAHAABAB4AHgABAAgAHAAfAB0AHgAfABwAIAAaAB0AIAAZABoACAAhAB4AHgAhAB8ACAAGACEAIgAdAB8AIgAgAB0AIwAfACEAIwAiAB8AJAAhAAYAJAAjACEACwAkAAYAJQAiACMAJgAgACIAJQAmACIAJgAnACAAJwAZACAAJQAoACYAJgAoACcAKQAlACMAKQAjACQAKQAoACUAJwAqABkAJwAoACoAKgAWABkAKwApACQAKwAkAAsAKwAoACkALAArAAsALAAoACsALAALAAoAKgAtABYAKgAoAC0ALQATABYALgAsAAoALgAoACwALgAKAAwALQAvABMALQAoAC8ALwAQABMAMAAuAAwAMAAoAC4AMAAMAA4ALwAoADEAMQAoADAALwAxABAAMQAwAA4AMQAOABAAMgAzADQAMwA1ADQAMgA2ADMANwA2ADIAMwA4ADUAOAA3ADUANgA4ADMAOAA5ADcANwA5ADYANgA5ADgAOgA7ADwAOwA9ADwAOgA+ADsAPwA+ADoAOwBAAD0AQAA/AD0APgBAADsAQABBAD8APwBBAD4APgBBAEAAQgBDAEQAQwBFAEQAQgBGAEMARwBGAEIAQwBIAEUASABHAEUARgBIAEMASABJAEcARwBJAEYARgBJAEgASgBLAEwASwBNAEwASgBOAEsATwBOAEoASwBQAE0AUABPAE0ATgBQAEsAUABRAE8ATwBRAE4ATgBRAFAA"),
"name": "material_0",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 82,
"vertex_data": PackedByteArray("SdMVX0nTAAD/f0Ed/38AAHueFV/G8QAASdN7xUnTAADG8RVfe54AAMbxe8V7ngAAxvF7xYNhAAB7nnvFxvEAAMbxFV+DYQAAg2EVX8bxAAAhyL3iIcgAAIfiveJmmgAAZpq94ofiAACDYXvFxvEAAJhlveKH4gAAtSwVX0nTAADdN73iIcgAALUse8VJ0wAAOA4VX3ueAAB3Hb3iZpoAADgOe8V7ngAAOA4VX4NhAAB3Hb3imGUAADgOe8WDYQAAtSwVX7UsAADdN73i3TcAALUse8W1LAAAg2EVXzgOAAB7nhVfOA4AAINhe8U4DgAASdMVX7UsAAB7nnvFOA4AAJhlveJ3HQAASdN7xbUsAABmmr3idx0AACHIveLdNwAAh+K94phlAACkqSj4WlYAAD2PKPgcRwAAwXAo+BxHAAD/f////38AAOK4KPjBcAAAWlYo+FpWAADiuCj4PY8AAKSpKPikqQAAHEco+MFwAAA9jyj44rgAABxHKPg9jwAAwXAo+OK4AABaVij4pKkAAI1jMzPGcQAAjWMAADiOAACNYzMzOI4AADgOZmY4jgAAjWMAAMZxAAA4DmZmxnEAAAAAAAA4jgAAAAAAAMZxAADGcTMzcZwAADiOAABxnAAAOI4zM3GcAAA4jmZmxvEAAMZxAABxnAAAxnFmZsbxAAA4jgAA//8AAMZxAAD//wAAOI4zM41jAADGcQAAjWMAAMZxMzONYwAAxnFmZjgOAAA4jgAAjWMAADiOZmY4DgAAxnEAAAAAAAA4jgAAAAAAAHGcMzM4jgAAcZwAAMZxAABxnDMzxnEAAMbxZmbGcQAAcZwAADiOAADG8WZmOI4AAP//AADGcQAA//8AADiOAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_xibqx"]
resource_name = "blockbench_export_mesh"
_surfaces = [{
"aabb": AABB(-0.28125, -1, -0.28125, 0.5625, 2.1875, 0.5625),
"attribute_data": PackedByteArray("qDnXOf8sZF9JMf83STH/N9w5AADcOf83STEAALYI/zf/DGRfVgDXOSMA/ze2CAAAtgj/NyMAAABJEf83/wxkX7YI/ze2CP83SREAAEkR/ze2CAAAqRnXOf8MZF9JEf83SRH/N9wZAADcGf83SREAALZg/4f/ZGSvVljXiSNY/4e2YP9PtmD/hyNY/09Jaf+H/2Rkr7Zg/4e2YP+HSWn/T0lp/4e2YP9PqHHXif9kZK9Jaf+HSWn/h9xx/0/ccf+HSWn/T7ZI/zf/TGRfVkDXOSNA/ze2SAAAtkj/NyNAAABJUf83/0xkX7ZI/ze2SP83SVEAAElR/ze2SAAAqFnXOf9MZF9JUf83SVH/N9xZAADcWf83SVEAALYo/zf/LGRfViDXOSMg/ze2KAAAtij/NyMgAABJMf83/yxkX7Yo/ze2KP83STEAAEkx/ze2KAAAJICQof99fZj5g6WfWBG2ZB4YW3G2EOJxnxVoZLYQ4nHWGWuBSREHgh4YW3H5g6Wf/319mIuGN5xffGh0SYHigeB5W4GmgLZ04HlbgbWAB5IoeGuRSYHigYuGN5z/fX2YT4f/lx6F/3O1iOKBY4GmgFiJtnRJgeKBSIkHkrWAB5K1iOKBcpi5g/+g/38FmyiHWIm2dB6QW4G1iOKBn41odLWI4oHWkWuRSIkHkh6QW4EFmyiH/6D/f9qeE4lgJGhkSSniceEhW3GmKLZk4SFbcbYoB4IoIGuBSSnicdqeE4n/oP9/JKMTiR4t/2O2MOJxYymmcFgxtmRJKeJxSTEHgrYoB4K2MOJxJKMTif+g/3/5piiHWDG2ZB44W3G2MOJxnzVoZLYw4nHWOWuBSTEHgh44W3H5piiH/6D/f4upuYNffGhQSYHiXeB5W12mgLZQ4HlbXbWAB24oeGttSYHiXa90/5f/fX2Yc3U3nB6F/0+1iOJdY4GmXFiJtlBJgeJdSIkHbrWAB261iOJdc3U3nP99fZgFeKWfWIm2UB6QW121iOJdn41oULWI4l3WkWttSIkHbh6QW10FeKWf/319mNp7kKFgBGhkSQniceEBW3GnCLZk4QFbcbYIB4IoAGuBSQnicdp7kKH/fX2YJICQoR4N/2O2EOJxZAmmcFgRtmRJCeJxSREHgrYIB4K2EOJx/z//S/87/2f/O/9L/z//Z/87/7//N/+H/zv/h/83/7//I/9f/xP/W/8j/1v/E/9femH9DQOZAAB2ff0M+2AAAP9L/2P/P4ib/0CNf/9LCJz/m/+P/5f/q/+X/4//m/+r/1P/m/9P/2P/U/9j/0//m/+f/y//o/8f/6P/L/+f/x96Yf01A5n/J3Z9/TT7YP8n/xv/h/8PiL//EI2j/xsIwP+jAAD/n/8b/58AAP+j/xv/M/+//y//h/8z/4f/L/+//6P/M/+f/0P/n/8z/6P/Q3ph/UkDmf87dn39SPtg/zv/K/+H/x+Iv/8gjaP/KwjA/4//l/+L/7P/i/+X/4//s/+b/3v/l/9D/5v/Q/+X/3v/n/9H/6//S/+f/0v/r/9HemH/IQOZAhR2fQAh+2ACFP8L/4cAAIi//wCNo/8LCMA="),
"format": 34896613399,
"index_count": 408,
"index_data": PackedByteArray("AAABAAIAAwAEAAUAAwAGAAQABwAIAAkACgALAAwACgANAAsADgAPABAAEQASABMAEQAUABIAFQAWABcAGAAZABoAGAAbABkAHAAdAB4AHwAgACEAHwAiACAAIwAkACUAJgAnACgAJgApACcAKgArACwALQAuAC8ALQAwAC4AMQAyADMANAA1ADYANAA3ADUAOAA5ADoAOwA8AD0AOwA+ADwAPwBAAEEAQgBDAEQAQgBFAEMARgBHAEgASQBKAEsASQBMAEoATQBOAE8AUABRAFIAUABTAFEAVABVAFYAVwBYAFkAVwBaAFgAWwBcAF0AWwBeAFwAXwBgAGEAYgBjAGQAYgBlAGMAZgBnAGgAZgBpAGcAagBrAGwAbQBuAG8AbQBwAG4AcQByAHMAcQB0AHIAdQB2AHcAeAB5AHoAeAB7AHkAfAB9AH4AfAB/AH0AgACBAIIAgwCEAIUAgwCGAIQAhwCIAIkAhwCKAIgAiwCMAI0AjgCPAJAAjgCRAI8AkgCTAJQAkgCVAJMAlgCXAJgAmQCaAJsAmQCcAJoAnQCeAJ8AnQCgAJ4AoQCiAKMApAClAKYApACnAKUAqACpAKoAqACrAKkArACtAK4ArwCwALEArwCyALAAswC0ALUAswC2ALQAtwC4ALkAugC7ALwAugC9ALsAvgC/AMAAvgDBAL8AwgDDAMQAxQDGAMcAxQDIAMYAyQDKAMsAyQDMAMoAzQDOAM8A0ADRANIA0ADTANEA1ADVANYA1ADXANUA2ADZANoA2ADbANkA3ADdAN4A3ADfAN0A4ADhAOIA4ADjAOEA5ADlAOYA5ADnAOUA6ADpAOoA6ADrAOkA7ADtAO4A7ADvAO0A8ADxAPIA8ADzAPEA9AD1APYA9AD3APUA+AD5APoA+AD7APkA/AD9AP4A/AD/AP0AAAEBAQIBAAEDAQEBBAEFAQYBBAEHAQUBCAEJAQoBCAELAQkBDAENAQ4BDAEPAQ0BEAERARIBEAETAREBFAEVARYBFAEXARUBGAEZARoBGAEbARkBHAEdAR4BHAEfAR0BIAEhASIBIAEjASEBJAElASYBJAEnASUB"),
"material": SubResource("StandardMaterial3D_g63y8"),
"name": "material_0",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 296,
"vertex_data": PackedByteArray("SdMVX0nTHJv/f0Ed/38cm3ueFV/G8Rybe54VX8bxVJVJ03vFSdNUlUnTFV9J01SVe557xcbxVJXG8RVfe54SsP9/QR3/fxKwSdMVX0nTErBJ0xVfSdOpqsbxe8V7nqmqxvEVX3ueqapJ03vFSdOpqsbxFV+DYcDB/39BHf9/wMHG8RVfe57AwcbxFV97nv+/xvF7xYNh/7/G8RVfg2H/v8bxe8V7nv+/SdMVX7Usy9T/f0Ed/3/L1MbxFV+DYcvUxvEVX4NhVNVJ03vFtSxU1UnTFV+1LFTVxvF7xYNhVNV7nhVfOA4V7f9/QR3/fxXtSdMVX7UsFe1J0xVftSyp6nuee8U4Dqnqe54VXzgOqepJ03vFtSyp6oNhFV84Dv///39BHf9///97nhVfOA7//3ueFV84Dv//g2F7xTgO//+DYRVfOA7//3uee8U4Dv//tSwVX7UsFe3/f0Ed/38V7YNhFV84DhXtg2EVXzgOqeq1LHvFtSyp6rUsFV+1LKnqg2F7xTgOqeo4DhVfg2HL1P9/QR3/f8vUtSwVX7Usy9S1LBVftSxU1TgOe8WDYVTVOA4VX4NhVNW1LHvFtSxU1TgOFV97nsDB/39BHf9/wME4DhVfg2HAwTgOFV+DYf+/OA57xXue/784DhVfe57/vzgOe8WDYf+/tSwVX0nTErD/f0Ed/38SsDgOFV97nhKwOA4VX3ueqaq1LHvFSdOpqrUsFV9J06mqOA57xXueqaqDYRVfxvEcm/9/QR3/fxybtSwVX0nTHJu1LBVfSdNUlYNhe8XG8VSVg2EVX8bxVJW1LHvFSdNUlXueFV/G8QmR/39BHf9/CZGDYRVfxvEJkYNhFV/G8QCAe557xcbxAIB7nhVfxvEAgINhe8XG8QCAPY8o+OK4KK//f////38or6SpKPikqSivPY8o+OK4+5shyL3iIcj7m2aaveKH4vubpKko+KSp+5tmmr3ih+L+lUnTe8VJ0/6Ve557xcbx/pUhyL3iIcj+laSpKPikqSq3/3////9/KrfiuCj4PY8qt6SpKPikqf6uh+K94maa/q4hyL3iIcj+ruK4KPg9j/6uIci94iHIQavG8XvFe55Bq0nTe8VJ00Grh+K94maaQaviuCj4PY/8wP9/////f/zA4rgo+MFw/MDiuCj4PY/tw4fiveKYZe3Dh+K94maa7cPiuCj4wXDtw4fiveJmmi3AxvF7xYNhLcDG8XvFe54twIfiveKYZS3A4rgo+MFw3PD/f////3/c8KSpKPhaVtzw4rgo+MFw89UhyL3i3Tfz1YfiveKYZfPVpKko+FpW89WH4r3imGVF1UnTe8W1LEXVxvF7xYNhRdUhyL3i3TdF1aSpKPhaVqn3/3////9/qfc9jyj4HEep96SpKPhaVuzrZpq94ncd7OshyL3i3Tfs6z2PKPgcR+zrIci94t036up7nnvFOA7q6knTe8W1LOrqZpq94ncd6uo9jyj4HEf///9/////f///wXAo+BxH//89jyj4HEdu/phlveJ3HW7+Zpq94ncdbv7BcCj4HEdu/maaveJ3Hf//g2F7xTgO//97nnvFOA7//5hlveJ3Hf//wXAo+BxHqff/f////3+p91pWKPhaVqn3wXAo+BxH7OvdN73i3Tfs65hlveJ3HezrWlYo+FpW7OuYZb3idx3q6rUse8W1LOrqg2F7xTgO6urdN73i3Tfq6lpWKPhaVtzw/3////9/3PAcRyj4wXDc8FpWKPhaVvPVdx294phl89XdN73i3Tfz1RxHKPjBcPPV3Te94t03RdU4DnvFg2FF1bUse8W1LEXVdx294phlRdUcRyj4wXD8wP9/////f/zAHEco+D2P/MAcRyj4wXDiwHcdveJmmuLAdx294phl4sAcRyj4PY/iwHcdveKYZS3AOA57xXueLcA4DnvFg2EtwHcdveJmmi3AHEco+D2PKrf/f////38qt1pWKPikqSq3HEco+D2P/q7dN73iIcj+rncdveJmmv6uWlYo+KSp/q53Hb3iZppBq7Use8VJ00GrOA57xXueQavdN73iIchBq1pWKPikqSiv/3////9/KK/BcCj44rgor1pWKPikqfubmGW94ofi+5vdN73iIcj7m8FwKPjiuPub3Te94iHI/pWDYXvFxvH+lbUse8VJ0/6VmGW94ofi/pXBcCj44rj0q/9/////f/SrPY8o+OK49KvBcCj44rgPlGaaveKH4g+UmGW94ofiD5Q9jyj44rgPlJhlveKH4myFe557xcbxbIWDYXvFxvFshWaaveKH4myFjWMzM8Zx/7+NYwAAOI7/v41jMzM4jv+/jWMAAMZx/78AAAAAOI4CwDgOZmbGcQLAOA5mZjiOAsAAAAAAxnECwI1jAADGcf+/AAAAADiO/7+NYwAAOI7/vwAAAADGcf+/jWMAADiOir44DmZmOI6Kvo1jMzM4joq+AAAAADiOir44DmZmxnH//41jAADGcf//jWMzM8Zx//8AAAAAxnH//8ZxMzNxnP//OI4AAHGc//84jjMzcZz//8ZxAABxnP//OI4AAP//c4HGcWZmxvFzgTiOZmbG8XOBxnEAAP//c4HGcQAAcZz/vziOAAD///+/OI4AAHGc/7/GcQAA////vziOAABxnH7UOI5mZsbxftQ4jjMzcZx+1DiOAAD//37UxnFmZsbxAsDGcQAAcZwCwMZxMzNxnALAxnEAAP//AsA4jjMzjWMAgMZxAACNYwCAxnEzM41jAIA4jgAAjWMAgMZxAAAAAP//OI5mZjgO///GcWZmOA7//ziOAAAAAP//OI4AAI1j/7/GcQAAAAD/v8ZxAACNY/+/OI4AAAAA/7/GcQAAjWN+1MZxZmY4Dn7UxnEzM41jftTGcQAAAAB+1DiOZmY4DgLAOI4AAI1jAsA4jjMzjWMCwDiOAAAAAALAcZwzMziO/79xnAAAxnH/v3GcMzPGcf+/cZwAADiO/7///wAAxnECwMbxZmY4jgLAxvFmZsZxAsD//wAAOI4CwHGcAAA4jv+///8AAMZx/79xnAAAxnH/v///AAA4jv+/cZwAAMZx///G8WZmxnH//3GcMzPGcf////8AAMZx///G8WZmOI5zgXGcAAA4jnOBcZwzMziOc4H//wAAOI5zgTs6Zzk7Omc5OzpnOf9/AAD/fwAA/38AAP9/AACCbKoxgmyqMYJsqjH/fwAA/38AAP9/AAD/fwAA7WwjJu1sIybtbCMm/38AAP9/AAD/fwAA/38AAFdqoyNXaqMjV2qjI/9/AAD/fwAA/38AAP9/AAAdheQcHYXkHB2F5Bz/fwAA/38AAP9/AAD/fwAAZ5b//2eW//9nlv///3////9/////f////3///+Sc4PrknOD65Jzg+v9/////f////3////9///9bXFfqW1xX6ltcV+r/f////3////9/////f///21nt7NtZ7ezbWe3s/3////9/////f////3///1ROguxUToLsVE6C7P9/////f////3////9///+XRju6l0Y7updGO7r/f////3////9/////f///AAD/fwAA/38AAP9//3////9/////f////3///wfiQG0H4kBtB+JAbaXB/zqlwf86pcEAO6XB/zoim3EhIptxISKbcSEim3EhDtYNZQ7WDWUO1g1l87JZHPOyWRzzslkc87JZHPuVcAj7lXAI+5VwCPuVcAiO1IFijtSBYo7UgWKBqA4NgagODYGoDg2BqA4ND4+IBw+PiAcPj4gHD4+IB8dD7wjHQ+8Ix0PvCN2j6Q/do+kP3aPpD92j6Q/AjXkIwI15CMCNeQjAjXkI0Up2BdFKdgXRSnYFa5vGAmubxgJrm8YCa5vHAgN1EgIDdRICA3USAgN1EgL/fxDQ/38Q0P9/ENAiiPjgIoj44CKI+OAiiPjg/3/+9/9//vf/f/73/3/+94l60cqJetHKiXrRysaCkuTGgpLkxoKS5MaCkuTtfQL17X0C9e19AvXtfQL1EHfGwxB3xsMQd8bD6Y8h3OmPIdzpjyHc6I8h3HmIPfJ5iD3yeYg98nmIPfKA4m+rgOJvq4Dib6synGLWMpxi1jKcYtYynGLWh4fu8IeH7vCHh+7wh4fu8Azl8KkM5fCpDOXwqVicCs1YnArNWJwKzVicCs1viALqb4gC6m+IAupviALqQO32nUDt9p1A7fad/7pZvv+6Wb7/ulm+/7pZvnGh2+RxodvkcaHb5HGh2+T///9/////f////3+J+O5YifjuWIn47liJ+O5Y////f////3////9/////f/9/AAD/fwAA/38AAP9/AAA0gpX7NIKV+zSClfs0gpX7AAD/fwAA/38AAP9/AAD/f/////////////////////8+gsD9PoLA/T6CwP0+gsD9/3////9/////f////3///////3////9/////f////38AAP9/AAD/fwAA/38AAP9/sCsnKrArJyqwKycqsCsnKmmEyv1phMr9aYTK/WmEyv3/f////3////9/////f////3/A/f9/wP3/f8D9/3/A/QAA/38AAP9/AAD/fwAA/39O1NfVTtTX1U7U19VO1NfVlXs0ApV7NAKVezQClXs0Av9/////f////3////9///9phDQCaYQ0AmmENAJphDQCAAD/fwAA/38AAP9/AAD/f9q+I8HaviPB2r4jwdq+I8H/////////////////////")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_k5akp")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p5cw2"]
height = 1.7521973
radius = 0.29052734

[sub_resource type="SphereShape3D" id="SphereShape3D_p5cw2"]
radius = 0.29749992

[node name="500kgBombObject" type="StaticBody3D" unique_id=624781419]
script = ExtResource("1_p5cw2")

[node name="blockbench_export" type="Node3D" parent="." unique_id=2081234650]

[node name="cylinder" type="MeshInstance3D" parent="blockbench_export" unique_id=507124468]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("ArrayMesh_xibqx")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=196534060]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8866148, 0)
shape = SubResource("CylinderShape3D_p5cw2")

[node name="DetonationArea" type="Area3D" parent="." unique_id=1436390425]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetonationArea" unique_id=743463189]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8719121, 0)
shape = SubResource("SphereShape3D_p5cw2")
debug_color = Color(0.9743976, 0.16202235, 3.85046e-07, 0.41960785)

[node name="FacingPoint" type="Node3D" parent="." unique_id=890287814]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)

[connection signal="body_entered" from="DetonationArea" to="." method="_on_detonation_area_body_entered"]
